Adds localizations to package.
Adds localization (.mo files) to the zip if using the supplied build
script.

--- a/po/meson.build
+++ b/po/meson.build
@@ -1,2 +1,2 @@
 i18n = import('i18n')
-i18n.gettext(meson.project_name(), preset: 'glib')
+i18n.gettext(meson.project_name(), install_dir: LOCALE_DIR , preset: 'glib')
